--- a/src/claims.css
+++ b/src/claims.css
@@ -29,7 +29,8 @@
 #form-details{
     width:400px;
     background-color: rgb(130, 132, 202);
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     border-radius: 10%;
     border: 3px solid black;
     
@@ -71,7 +72,6 @@
     height:90%;
 
     vertical-align:top;
-    /* display:inline-block; */
     border-radius: 20%;
     margin-top: -55px;
     position:relative;
